--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-sqlmodel==0.0.14
+sqlmodel>=0.0.22
 psycopg2-binary==2.9.9
 alembic==1.12.1
 python-jose[cryptography]==3.3.0
@@ -14,3 +14,6 @@ email-validator==2.1.0
 cors==1.0.1
 fastapi-cors==0.0.6
 tenacity==8.2.3
+# Added missing dependencies used by FCM service
+aiohttp
+google-auth
