--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "recharts": "2.8.0",
     "tailwind-merge": "2.0.0",
     "tailwindcss": "3.3.5",
+    "tesseract.js": "^6.0.1",
     "three": "0.158.0",
     "typescript": "5.2.2",
     "workbox-window": "^7.3.0",
