--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,32 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlmodel>=0.0.22
-psycopg2-binary==2.9.9
-alembic==1.12.1
+# Core FastAPI dependencies with binary wheels
+fastapi==0.115.6
+uvicorn[standard]==0.32.1
+sqlmodel==0.0.22
+
+# Database dependencies (binary wheels available)
+psycopg2-binary==2.9.10
+alembic==1.14.0
+
+# Authentication & Security (optimized for binary wheels)
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-python-dotenv==1.0.0
-httpx==0.25.2
-pydantic==2.5.0
-pydantic-settings==2.1.0
-email-validator==2.1.0
-tenacity==8.2.3
-# Added missing dependencies used by FCM service
-aiohttp
-google-auth
+
+# HTTP & Validation (latest stable with wheels)
+httpx==0.28.1
+python-multipart==0.0.12
+python-dotenv==1.0.1
+email-validator==2.2.0
+
+# Pydantic ecosystem (latest stable)
+pydantic==2.10.3
+pydantic-settings==2.7.0
+
+# Utilities with binary wheels
+tenacity==9.0.0
+
+# Firebase Cloud Messaging dependencies (with versions)
+aiohttp==3.11.10
+google-auth==2.37.0
+
+# Additional optimization flags
+# Install with: pip install --prefer-binary --no-cache-dir -r requirements.txt
