--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,9 +7,13 @@ sqlmodel==0.0.22
 psycopg2-binary==2.9.10
 alembic==1.14.0
 
-# Authentication & Security (optimized for binary wheels)
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+# Authentication & Security (FIXED: specific versions with guaranteed wheels)
+# Avoid cryptography compilation issues
+cryptography==41.0.8
+python-jose==3.3.0
+# Avoid bcrypt compilation issues  
+bcrypt==4.1.3
+passlib==1.7.4
 
 # HTTP & Validation (latest stable with wheels)
 httpx==0.28.1
