--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,36 +1,37 @@
-# Core FastAPI dependencies with binary wheels
-fastapi==0.115.6
-uvicorn[standard]==0.32.1
+# RENDER COMPATIBLE - Python 3.11 with guaranteed binary wheels
+# Core FastAPI dependencies (older stable versions)
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
 sqlmodel==0.0.22
 
 # Database dependencies (binary wheels available)
-psycopg2-binary==2.9.10
-alembic==1.14.0
+psycopg2-binary==2.9.9
+alembic==1.12.1
 
-# Authentication & Security (FIXED: specific versions with guaranteed wheels)
+# Authentication & Security (FIXED: older versions with guaranteed wheels)
 # Avoid cryptography compilation issues
-cryptography==41.0.8
+cryptography==41.0.7
 python-jose==3.3.0
 # Avoid bcrypt compilation issues  
-bcrypt==4.1.3
+bcrypt==4.0.1
 passlib==1.7.4
 
-# HTTP & Validation (latest stable with wheels)
-httpx==0.28.1
-python-multipart==0.0.12
-python-dotenv==1.0.1
-email-validator==2.2.0
+# HTTP & Validation (older stable with wheels)
+httpx==0.25.2
+python-multipart==0.0.6
+python-dotenv==1.0.0
+email-validator==2.1.0
 
-# Pydantic ecosystem (latest stable)
-pydantic==2.10.3
-pydantic-settings==2.7.0
+# Pydantic ecosystem (older stable - CRITICAL: avoid pydantic-core Rust builds)
+pydantic==2.5.0
+pydantic-settings==2.1.0
 
 # Utilities with binary wheels
-tenacity==9.0.0
+tenacity==8.2.3
 
-# Firebase Cloud Messaging dependencies (with versions)
-aiohttp==3.11.10
-google-auth==2.37.0
+# Firebase Cloud Messaging dependencies (older versions)
+aiohttp==3.9.1
+google-auth==2.25.2
 
 # Additional optimization flags
 # Install with: pip install --prefer-binary --no-cache-dir -r requirements.txt
