--- a/render.yaml
+++ b/render.yaml
@@ -10,9 +10,19 @@ services:
     region: oregon
     branch: main
     rootDir: ./backend
-    buildCommand: pip install -r requirements.txt
-    startCommand: python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    buildCommand: ./start.sh
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
+      - key: PYTHON_VERSION
+        value: "3.11.11"
+      - key: CRYPTOGRAPHY_DONT_BUILD_RUST
+        value: "1"
+      - key: BCRYPT_DONT_BUILD_RUST
+        value: "1"
+      - key: PIP_PREFER_BINARY
+        value: "1"
+      - key: PIP_NO_CACHE_DIR
+        value: "1"
       - key: DATABASE_URL
         fromDatabase:
           name: melitus-gym-db
@@ -23,7 +33,11 @@ services:
         value: "https://melitus-gym-frontend.onrender.com,http://localhost:3000"
       - key: FDC_API_KEY
         sync: false  # Set manually in Render dashboard
-    healthCheckPath: /api/health
+      - key: ENVIRONMENT
+        value: "production"
+      - key: ALLOWED_ORIGINS
+        value: "https://melitus-gym-frontend.onrender.com,http://localhost:3000"
+    healthCheckPath: /health
     
   # Frontend Web Service
   - type: web
