--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,6 +32,7 @@ tenacity==8.2.3
 # Firebase Cloud Messaging dependencies (older versions)
 aiohttp==3.9.1
 google-auth==2.25.2
+requests==2.31.0
 
 # Additional optimization flags
 # Install with: pip install --prefer-binary --no-cache-dir -r requirements.txt
