feat: Auditoria e correção da integração frontend/backend
- Atualizado README.md com documentação completa do projeto
- Melhorado .env.example do backend com comentários detalhados
- Melhorado .env.example do frontend com exemplos de configuração
- Adicionado scripts de validação de dependências e ambiente
- Documentado configurações de CORS, JWT e APIs externas
- Estabelecido padrões para desenvolvimento local e produção

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,12 @@
-# Firebase Configuration
+# Melitus Gym Frontend Environment Variables
+# Copy this file to .env.local for local development
+
+# Backend API Configuration
+# For local development: http://127.0.0.1:8000/api
+# For production (Render): https://melitus-gym-backend.onrender.com/api
+NEXT_PUBLIC_API_URL=http://127.0.0.1:8000/api
+
+# Firebase Configuration (for push notifications)
 NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key_here
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
@@ -7,15 +15,15 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
-# Firebase Cloud Messaging
+# Firebase Cloud Messaging (for push notifications)
 NEXT_PUBLIC_FIREBASE_VAPID_KEY=your_vapid_key_here
 
-# Backend API
-NEXT_PUBLIC_API_URL=http://127.0.0.1:8000/api
+# Vision/AI Backend Configuration
+# Options: 'local' (local processing), 'tfjs' (TensorFlow.js + COCO-SSD), 'onnx' (ONNX + YOLO)
+NEXT_PUBLIC_VISION_BACKEND=local
+
+# Performance Configuration
+NEXT_PUBLIC_LAZY_MODEL_LOADING=true
 
 # Environment
 NODE_ENV=development
-
-# Vision/AI Backend Configuration
-# Options: 'tfjs' (TensorFlow.js + COCO-SSD) or 'onnx' (ONNX + YOLO)
-NEXT_PUBLIC_VISION_BACKEND=tfjs
