--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,21 @@
-# Database
+# Melitus Gym Backend Environment Variables
+# Copy this file to .env for local development
+
+# Database Configuration
 DATABASE_URL=postgresql://user:password@localhost:5432/melitus_gym
 
-# JWT
-SECRET_KEY=your_super_secret_jwt_key_here_change_in_production
-ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+# JWT Configuration
+JWT_SECRET_KEY=your_super_secret_jwt_key_here_change_in_production
+JWT_ALGORITHM=HS256
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# CORS
-ALLOWED_ORIGINS=http://127.0.0.1:3000,http://localhost:3000,https://your-vercel-domain.vercel.app
+# CORS Configuration
+# For local development: http://127.0.0.1:3000,http://localhost:3000
+# For production (Render): https://melitus-gym-frontend.onrender.com,http://localhost:3000
+ALLOWED_ORIGINS=http://127.0.0.1:3000,http://localhost:3000
+
+# Server Configuration
+PORT=8000
 
 # Firebase Cloud Messaging
 FCM_PROJECT_ID=your_firebase_project_id
