feat: Configuração para produção - URLs públicas e CORS
- Frontend: Atualizado NEXT_PUBLIC_API_URL para https://melitusgym-backend.onrender.com/api
- Frontend: Corrigidas URLs hardcoded em nutricao/page.tsx, sw.js e next.config.js
- Backend: Adicionado https://melitusgym.onrender.com às origens CORS permitidas
- Backend: Corrigida rota /health para retornar status 'ok' com timestamp dinâmico
- Render: Atualizadas URLs no render.yaml para deploy em produção
- CORS: Configurado para permitir requisições do frontend em produção

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,40 @@
-FROM python:3.11-slim
+# Dockerfile otimizado para simular ambiente Render
+FROM python:3.11.11-slim
 
 # Definir diretório de trabalho
 WORKDIR /app
 
-# Instalar dependências do sistema
+# Configurar variáveis de ambiente para evitar builds nativos (igual ao Render)
+ENV CRYPTOGRAPHY_DONT_BUILD_RUST=1
+ENV BCRYPT_DONT_BUILD_RUST=1
+ENV PIP_PREFER_BINARY=1
+ENV PIP_NO_CACHE_DIR=1
+ENV PYTHONUNBUFFERED=1
+
+# Instalar dependências do sistema mínimas
 RUN apt-get update && apt-get install -y \
-    gcc \
     postgresql-client \
     && rm -rf /var/lib/apt/lists/*
 
-# Copiar requirements e instalar dependências Python
+# Copiar requirements primeiro (para cache do Docker)
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+
+# Instalar dependências Python com flags otimizadas (igual ao start.sh)
+RUN pip install --prefer-binary --no-cache-dir --no-compile --only-binary=all -r requirements.txt
 
 # Copiar código da aplicação
 COPY . .
 
+# Criar usuário não-root para segurança
+RUN useradd --create-home --shell /bin/bash app && chown -R app:app /app
+USER app
+
 # Expor porta
 EXPOSE 8000
 
-# Comando para iniciar a aplicação
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
+# Comando para iniciar a aplicação (igual ao Render)
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
