--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=http://localhost:8000/api
+NEXT_PUBLIC_API_URL=https://melitusgym-backend.onrender.com/api
 
 # Firebase Configuration
 NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key_here
