--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,41 +29,37 @@ services:
     container_name: healthtrack_backend
     environment:
       - DATABASE_URL=postgresql://healthtrack_user:healthtrack_pass@db:5432/healthtrack
-      - SECRET_KEY=your-secret-key-change-in-production
-      - ALGORITHM=HS256
-      - ACCESS_TOKEN_EXPIRE_MINUTES=30
-      - ENVIRONMENT=development
+      - JWT_SECRET_KEY=melitus-gym-super-secret-key-2024-production
+      - CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+      - ENVIRONMENT=production
+      - CRYPTOGRAPHY_DONT_BUILD_RUST=1
+      - BCRYPT_DONT_BUILD_RUST=1
+      - PIP_PREFER_BINARY=1
+      - PIP_NO_CACHE_DIR=1
     ports:
       - "8000:8000"
-    volumes:
-      - ./backend:/app
     depends_on:
       db:
         condition: service_healthy
     networks:
       - healthtrack_network
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
 
   # Next.js Frontend
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     container_name: healthtrack_frontend
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:8000
-      - NODE_ENV=development
+      - NODE_ENV=production
     ports:
       - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-      - /app/.next
     depends_on:
       - backend
     networks:
       - healthtrack_network
-    command: npm run dev
 
 volumes:
   postgres_data:
