--- a/render.yaml
+++ b/render.yaml
@@ -30,13 +30,13 @@ services:
       - key: JWT_SECRET_KEY
         generateValue: true
       - key: CORS_ORIGINS
-        value: "https://melitus-gym-frontend.onrender.com,http://localhost:3000"
+        value: "https://melitusgym.onrender.com,http://localhost:3000"
       - key: FDC_API_KEY
         sync: false  # Set manually in Render dashboard
       - key: ENVIRONMENT
         value: "production"
       - key: ALLOWED_ORIGINS
-        value: "https://melitus-gym-frontend.onrender.com,http://localhost:3000"
+        value: "https://melitusgym.onrender.com,http://localhost:3000"
     healthCheckPath: /health
     
   # Frontend Web Service
@@ -51,7 +51,7 @@ services:
     startCommand: npm start
     envVars:
       - key: NEXT_PUBLIC_API_URL
-        value: "https://melitus-gym-backend.onrender.com/api"
+        value: "https://melitusgym-backend.onrender.com/api"
       - key: NODE_ENV
         value: production
     
