chore(deploy): atualizar URLs Railway
- backend app.main: contact.url -> https://melitusgym-production.up.railway.app
- docs: ALLOWED_ORIGINS -> https://tranquil-vitality-production-15a2.up.railway.app
- frontend env docs: NEXT_PUBLIC_API_URL -> https://melitusgym-production.up.railway.app/api
- deploy_setup: template Railway ajustado para ALLOWED_ORIGINS
- README: produção aponta para domínios Railway (backend/frontend)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -57,7 +57,7 @@ JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
 ALLOWED_ORIGINS=http://127.0.0.1:3000,http://localhost:3000
 
 # Para produção, adicione seus domínios:
-# ALLOWED_ORIGINS=https://melitusgym.vercel.app,https://www.melitusgym.com
+# ALLOWED_ORIGINS=https://tranquil-vitality-production-15a2.up.railway.app
 
 # Para staging:
 # ALLOWED_ORIGINS=https://melitus-gym-frontend.onrender.com,http://localhost:3000
