--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,9 @@ services:
       POSTGRES_PASSWORD: healthtrack_pass
       POSTGRES_HOST_AUTH_METHOD: trust
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - healthtrack_network
     healthcheck:
@@ -29,13 +28,16 @@ services:
     container_name: healthtrack_backend
     environment:
       - DATABASE_URL=postgresql://healthtrack_user:healthtrack_pass@db:5432/healthtrack
+      - USE_SQLITE=false
       - JWT_SECRET_KEY=melitus-gym-super-secret-key-2024-production
-      - CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+      - CORS_ORIGINS=["http://127.0.0.1:3000","http://localhost:3000"]
       - ENVIRONMENT=production
       - CRYPTOGRAPHY_DONT_BUILD_RUST=1
       - BCRYPT_DONT_BUILD_RUST=1
       - PIP_PREFER_BINARY=1
       - PIP_NO_CACHE_DIR=1
+      - ENABLE_ADMIN_RESET=true
+      - ADMIN_RESET_TOKEN=init-reset-2025
     ports:
       - "8000:8000"
     depends_on:
@@ -52,7 +54,7 @@ services:
       dockerfile: Dockerfile
     container_name: healthtrack_frontend
     environment:
-      - NEXT_PUBLIC_API_URL=http://localhost:8000
+      - NEXT_PUBLIC_API_URL=http://127.0.0.1:8000/api
       - NODE_ENV=production
     ports:
       - "3000:3000"
