--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,9 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 ENVIRONMENT=development
 
 # Frontend Configuration
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# Use sempre o sufixo "/api" na URL base para alinhar com os endpoints
+# Exemplo de desenvolvimento local:
+NEXT_PUBLIC_API_URL=http://127.0.0.1:8000/api
 NODE_ENV=development
 
 # External APIs (Para fases futuras)
