Backend: robust CORS origins parsing; add TACOFood model; stub fcm_scheduler to silence import error; fix docker-compose envs; adjust test scripts; add TBCA/TACO enrichment docs

--- a/.env.example
+++ b/.env.example
@@ -32,10 +32,26 @@ MAX_FILE_SIZE=10485760  # 10MB
 UPLOAD_DIR=./uploads
 
 # Security
-CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+# CORS_ORIGINS aceita dois formatos:
+# 1) CSV: http://127.0.0.1:3000,http://localhost:3000
+# 2) Lista JSON em string: ["http://127.0.0.1:3000","http://localhost:3000"]
+# Recomendado: CSV (sem colchetes) para evitar incompatibilidades.
+CORS_ORIGINS=http://127.0.0.1:3000,http://localhost:3000
+ALLOWED_ORIGINS=http://127.0.0.1:3000,http://localhost:3000
 
 # Logging
+# Logging
+# Valores: DEBUG, INFO, WARNING, ERROR
 LOG_LEVEL=INFO
+
+# JWT (usados no backend, com compatibilidade de nomes)
+JWT_SECRET_KEY=your-secret-key-change-in-production-minimum-32-characters
+JWT_ALGORITHM=HS256
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
+# Fallbacks compatíveis (alguns serviços usam estes nomes)
+SECRET_KEY=${JWT_SECRET_KEY}
+ALGORITHM=${JWT_ALGORITHM}
+ACCESS_TOKEN_EXPIRE_MINUTES=${JWT_ACCESS_TOKEN_EXPIRE_MINUTES}
 
 # Redis Configuration (Para cache futuro)
 # REDIS_URL=redis://localhost:6379
