--- a/.env.example
+++ b/.env.example
@@ -31,13 +31,16 @@ NODE_ENV=development
 MAX_FILE_SIZE=10485760  # 10MB
 UPLOAD_DIR=./uploads
 
-# Security
+# Security - CORS Configuration
 # CORS_ORIGINS aceita dois formatos:
-# 1) CSV: http://127.0.0.1:3000,http://localhost:3000
+# 1) CSV (recomendado para Railway): http://127.0.0.1:3000,http://localhost:3000
 # 2) Lista JSON em string: ["http://127.0.0.1:3000","http://localhost:3000"]
-# Recomendado: CSV (sem colchetes) para evitar incompatibilidades.
-CORS_ORIGINS=http://127.0.0.1:3000,http://localhost:3000
-ALLOWED_ORIGINS=http://127.0.0.1:3000,http://localhost:3000
+# 
+# IMPORTANTE: Para Railway, use sempre o formato CSV sem colchetes
+# Exemplo para produção Railway:
+# CORS_ORIGINS=https://tranquil-vitality-production-15a2.up.railway.app,http://127.0.0.1:3000,http://localhost:3000
+CORS_ORIGINS=http://127.0.0.1:3000,http://localhost:3000,https://tranquil-vitality-production-15a2.up.railway.app
+ALLOWED_ORIGINS=http://127.0.0.1:3000,http://localhost:3000,https://tranquil-vitality-production-15a2.up.railway.app
 
 # Logging
 # Logging
