Nutrição: loader dinâmico TACO (XLSX/CSV), cache e upsert em DB; script Railway; .env atualizado; documentação DEPLOY_RAILWAY e frontend (NEXT_PUBLIC_API_URL).

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,14 @@ DATABASE_URL=postgresql://healthtrack_user:healthtrack_pass@localhost:5432/healt
 POSTGRES_DB=healthtrack
 POSTGRES_USER=healthtrack_user
 POSTGRES_PASSWORD=healthtrack_pass
+USE_SQLITE=true  # development default; set to false in Railway
 
 # Backend Configuration
 SECRET_KEY=your-secret-key-change-in-production-minimum-32-characters
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 ENVIRONMENT=development
+PORT=8000  # Railway sets PORT automatically; backend binds to this
 
 # Frontend Configuration
 # Use sempre o sufixo "/api" na URL base para alinhar com os endpoints
@@ -30,6 +32,10 @@ NODE_ENV=development
 # File Upload Configuration
 MAX_FILE_SIZE=10485760  # 10MB
 UPLOAD_DIR=./uploads
+
+# Nutrition TACO Dynamic Loader
+# If not set, the backend will look for Taco-4a-Edicao.xlsx at repo root
+TACO_FILE_PATH=./Taco-4a-Edicao.xlsx
 
 # Security - CORS Configuration
 # CORS_ORIGINS aceita dois formatos:
