--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL=https://melitusgym-production.up.railway.app/api
+NEXT_PUBLIC_API_URL=http://127.0.0.1:8000/api
+NEXT_DISABLE_WEBPACK_OUTPUT_LINKS=1
