fix(backend): validação estrita de DATABASE_URL; bloquear localhost/sqlite em produção
refactor(core): remover fallback e exigir DATABASE_URL de env em produção

ci(workflow): validar presença de Taco-4a-Edicao.xlsx no deploy

feat(nutrition): endpoint /api/nutrition/v2/taco e loader com source 'taco_db'

feat(frontend): FoodAutocomplete usa tacoService.searchTacoFoods (otimizado)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Verify TACO file exists in repo root
+      run: |
+        ls -la
+        if [ ! -f Taco-4a-Edicao.xlsx ]; then
+          echo "🚨 Arquivo TACO não encontrado: Taco-4a-Edicao.xlsx"
+          exit 1
+        else
+          echo "✅ Arquivo TACO presente no repositório."
+        fi
     
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
