Correção de CORS e configuração para deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       dockerfile: Dockerfile
     container_name: healthtrack_frontend
     environment:
-      - NEXT_PUBLIC_API_URL=http://127.0.0.1:8000/api
+      - NEXT_PUBLIC_API_URL=http://backend:8000/api  # Usando o nome do serviço
       - NODE_ENV=production
     ports:
       - "3000:3000"
