--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,5 +38,9 @@ requests==2.31.0
 openpyxl==3.1.2
 pdfplumber==0.10.3
 
+# Web Scraping for TACO online
+beautifulsoup4==4.12.2
+lxml==4.9.3
+
 # Additional optimization flags
 # Install with: pip install --prefer-binary --no-cache-dir -r requirements.txt
