--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,2 +1,6 @@
 NEXT_PUBLIC_API_URL=http://127.0.0.1:8000/api
 NEXT_DISABLE_WEBPACK_OUTPUT_LINKS=1
+
+# Frontend/.env.local
+NEXT_PUBLIC_API_URL=http://localhost:8000/api
+NODE_ENV=development
